syntax = "proto3";
package database_monitoring.v1;
option go_package = "github.com/guilhermearpassos/database-monitoring/proto/database_monitoring/v1;dbmv1";
import "google/protobuf/timestamp.proto";


message QuerySample {
  string status = 1;
  string sql_handle = 2;
  string text = 3;
  bool blocked = 4;
  bool blocker = 5;
  int64 time_elapsed_millis = 10;
  SessionMetadata session = 6;
  DBMetadata db = 7;
  BlockMetadata block_info = 8;
  WaitMetadata wait_info = 9;
  SnapMetadata snap_info = 11;
  string plan_handle = 12;
  string id = 13;
  CommandMetadata command = 14;
  string query_hash = 15;
}

message CommandMetadata {
  string transaction_id = 1;
  string request_id = 2;
  int64 estimated_completion_time = 3;
  double percent_complete = 4;

}

message SnapMetadata {
  string id = 1;
  google.protobuf.Timestamp timestamp = 2;
}

message SessionMetadata {
  string session_id = 1;
  google.protobuf.Timestamp login_time = 2;
  string host = 3;
  string program_name = 4;
  string login_name = 5;
  string status = 6;
  google.protobuf.Timestamp last_request_start = 7;
  google.protobuf.Timestamp last_request_end = 8;
  string connection_id = 9;
  string client_ip = 10;
}

message DBMetadata {
  string database_id = 1;
  string database_name = 2;
}

message BlockMetadata {
  string blocked_by = 1;
  repeated string blocked_sessions = 2;
}

message WaitMetadata {
  string wait_type = 1;
  int64 wait_time = 2;
  string last_wait_type = 3;
  string wait_resource = 4;
}

message QueryMetric {
  string query_hash = 1;
  string text = 2;
  DBMetadata db = 3;
  google.protobuf.Timestamp last_execution_time = 4;
  int64 last_elapsed_time_micros = 5;
  map<string, int64> counters = 6;
  map<string,double> rates = 7;
}